force-app/main/default/objects/Document_Intake_Config__mdt/Document_Intake_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configures document intake runtime behavior by source channel. Apex uses this metadata to resolve customer-friendly library and folder names into Salesforce content workspace ids before starting the splitter pipeline.</description>
    <label>Document Intake Config</label>
    <pluralLabel>Document Intake Configs</pluralLabel>
</CustomObject>