force-app/main/default/objects/Document_Intake_Config__mdt/fields/Auto_Review_Fallback_Category__c.field-meta.xml
<CustomField>
    <fullName>Auto_Review_Fallback_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether automated document intake sends files in the configured fallback category to AI review.</description>
    <inlineHelpText>Check this to include files in the configured fallback category during automatic AI review. Users can still include them manually from the review button.</inlineHelpText>
    <label>Auto Review Fallback Category</label>
    <type>Checkbox</type>
</CustomField>