force-app/main/default/objects/Document_Intake_Config__mdt/fields/Create_Others_Category__c.field-meta.xml
<CustomField>
    <fullName>Create_Others_Category__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether intake orchestration may create an Others document category when split output cannot be confidently mapped.</description>
    <inlineHelpText>When checked, low-confidence or unmapped files can be placed into an Others category during the mapping phase.</inlineHelpText>
    <label>Create Others Category</label>
    <type>Checkbox</type>
</CustomField>