force-app/main/default/objects/Document_Intake_Config__mdt/fields/Default_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Category_Name__c</fullName>
    <description>Fallback document category name used when mapping cannot confidently identify a better category.</description>
    <inlineHelpText>Optional fallback category name for low-confidence mappings, usually Others.</inlineHelpText>
    <label>Default Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>