force-app/main/default/objects/Document_Intake_Config__mdt/fields/Fallback_Parent_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Parent_Category_Name__c</fullName>
    <description>Parent document category name used when unmapped intake files are placed in the fallback bucket.</description>
    <inlineHelpText>Optional parent category name for fallback placement, usually Uncategorized.</inlineHelpText>
    <label>Fallback Parent Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>