force-app/main/default/objects/Document_Intake_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this intake configuration is eligible for runtime lookup.</description>
    <inlineHelpText>Only active records are used by the document intake API.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>