force-app/main/default/objects/Document_Intake_Config__mdt/fields/Library_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Library_Developer_Name__c</fullName>
    <description>Developer name of the Salesforce content library where intake output should be stored.</description>
    <inlineHelpText>Preferred stable lookup key when available. Leave blank if the library does not expose a developer name.</inlineHelpText>
    <label>Library Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>