force-app/main/default/objects/Document_Intake_Config__mdt/fields/Library_Name__c.field-meta.xml
<CustomField>
    <fullName>Library_Name__c</fullName>
    <description>Display name of the Salesforce content library where intake output should be stored.</description>
    <inlineHelpText>Enter the Salesforce library name exactly as it appears in Files. Used when Library Developer Name is blank or unavailable.</inlineHelpText>
    <label>Library Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>