force-app/main/default/objects/Document_Intake_Config__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Document intake source channel this configuration applies to.</description>
    <inlineHelpText>Select the source channel that should use this library and folder configuration.</inlineHelpText>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PORTAL</fullName>
                <default>true</default>
                <label>Portal</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>