force-app/main/default/objects/Document_Intake_Config__mdt/fields/Target_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Folder_Name__c</fullName>
    <description>Optional folder name inside the configured Salesforce content library.</description>
    <inlineHelpText>Optional. Enter the target folder name inside the configured library.</inlineHelpText>
    <label>Target Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>