force-app/main/default/objects/Document_Intake_Config__mdt/fields/Target_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Target_Folder_Path__c</fullName>
    <description>Optional slash-delimited folder path inside the configured Salesforce content library.</description>
    <inlineHelpText>Optional. Use when folder names are nested or repeated, for example Intake/Portal.</inlineHelpText>
    <label>Target Folder Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>